criando endpoint delete update e obter em controller e repositorios
